game fixed on mobile

--- a/static/style/modern/pong2d.css
+++ b/static/style/modern/pong2d.css
@@ -346,7 +346,7 @@
 
     .themeContainer{
         width: 100%;
-        height: 70svh;
+        height: 60svh;
         padding: 0px;
 
     }
@@ -363,9 +363,14 @@
         width: 80%;
     }   
     .base{
-        flex-direction: column;
+        flex-direction: column-reverse;
         height: fit-content;
-        padding: 20px;
+        min-height: 92svh;
+
+        padding: 10px;
+        /* gap: 0; */
+        justify-content: space-evenly;
+
     }
 
     .left, .right{
@@ -374,6 +379,9 @@
     .center{
         width: 100%;
         height: 92svh;
+        padding: 0;
+        background-color: transparent;
+        backdrop-filter: blur(0px);
         justify-content: space-between;
     }
 
@@ -405,7 +413,7 @@
     .btnWindow{
         width: 100%;
         height: 30%;
-        margin-top: 40px;
+        margin-top: 0px;
     }
     .mobile{
         width: 30%;
