--- a/static/style/pong2d.css
+++ b/static/style/pong2d.css
@@ -344,7 +344,7 @@ h3{
 
     .themeContainer{
         width: 100%;
-        height: 70svh;
+        height: 60svh;
         padding: 0px;
 
     }
@@ -361,9 +361,12 @@ h3{
         width: 80%;
     }   
     .base{
-        flex-direction: column;
+        flex-direction: column-reverse;
         height: fit-content;
-        padding: 20px;
+        min-height: 92svh;
+        padding: 10px;
+        /* gap: 0; */
+        justify-content: space-evenly;
     }
 
     .left, .right{
@@ -372,6 +375,9 @@ h3{
     .center{
         width: 100%;
         height: 92svh;
+        padding: 0;
+        background-color: transparent;
+        backdrop-filter: blur(0px);
         justify-content: space-between;
     }
 
@@ -403,7 +409,7 @@ h3{
     .btnWindow{
         width: 100%;
         height: 30%;
-        margin-top: 40px;
+        margin-top: 0px;
     }
     .mobile{
         width: 30%;
